--- a/src/Pbx/WebBundle/Resources/config/services.yml
+++ b/src/Pbx/WebBundle/Resources/config/services.yml
@@ -14,3 +14,9 @@ services:
         class: Pbx\WebBundle\Form\Handler\RegistrationFormHandler
         parent: fos_user.registration.form.handler.default
         scope: request
+
+    pbx_user.registration.form.type:
+        class: Pbx\WebBundle\Form\Type\RegistrationFormType
+        arguments: [%fos_user.model.user.class%]
+        tags:
+            - { name: form.type, alias: pbx_user_registration }
