--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,6 +25,8 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
+    globals:
+        project_name: %project_name%
 
 # Assetic Configuration
 assetic:
@@ -78,15 +80,10 @@ fos_user:
             type:               pbx_user_registration
             name:               fos_user_registration_form
             validation_groups:  [Registration, Default]
-#    registration:
-#        form:
-#            type: pbx_user_registration
-#    registration:
-#        form:
 #            handler: pbx.form.handler.registration
-#    profile:
-#        form:
-#            type:    pbx_user_profile
+    profile:
+        form:
+            type:    pbx_user_profile
 
 
 # see https://github.com/avalanche123/AvalancheImagineBundle
